# aomCheck

./: CMakeLists.txt  decode.c  encode.c  opencvTest.c  readme.md
